# ShipNetSim

./: CMakeLists.txt  README.md
docker/scripts/: run-cli.sh
scripts/: download_data.ps1  download_data.sh
src/ShipNetSimAdjBuilder/: main.cpp
src/ShipNetSimCore/: CMakeLists.txt  simulator.cpp  simulatorapi.cpp
src/ShipNetSimCore/network/: gline.cpp  gline.h  gsegment.cpp  gsegment.h  hierarchicalvisibilitygraph.cpp  hierarchicalvisibilitygraph.h  holespatialindex.cpp  holespatialindex.h  networkdefaults.h  optimizednetwork.cpp  outerringspatialindex.cpp  outerringspatialindex.h  polygon.cpp  polygon.h  quadtree.cpp  quadtree.h
src/ShipNetSimCore/ship/: ship.cpp  ship.h  shipfuel.cpp
src/ShipNetSimGUI/: CMakeLists.txt  main.cpp
src/ShipNetSimGUI/gui/windowMangement/: shipnetsim.h
src/ShipNetSimServer/: SimulationServer.h  main.cpp  simulationserver.cpp
tests/: CMakeLists.txt  benchmark_diag_slow.cpp  benchmark_diagnose.cpp  benchmark_hier_only.cpp  benchmark_nocache.cpp  benchmark_nocache_allroutes.cpp  benchmark_nocache_geojson.cpp  benchmark_paper.cpp  test_gsegment.cpp  test_hierarchicalvisibilitygraph.cpp  test_optimizedvisibilitygraph.cpp  test_shortestpath_realworld.cpp  test_shortestpath_synthetic.cpp
